--- a/v0/app/src/main/res/navigation/nav_home.xml
+++ b/v0/app/src/main/res/navigation/nav_home.xml
@@ -14,17 +14,17 @@
                 android:id="@+id/actionSetupSession"
                 app:destination="@id/detailsDestination"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"
-                app:enterAnim="@anim/nav_default_enter_anim"
+                app:popExitAnim="@anim/fade_out_bottom"
+                app:enterAnim="@anim/fade_in_bottom"
                 app:exitAnim="@anim/nav_default_exit_anim" />
         <action
                 android:id="@+id/actionResumeSession"
-                app:destination="@id/navigationDestionation"
+                app:destination="@id/navigationDestination"
                 app:popUpTo="@+id/startDestination"
-                app:enterAnim="@anim/nav_default_enter_anim"
+                app:enterAnim="@anim/fade_in_bottom"
                 app:exitAnim="@anim/nav_default_exit_anim"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"
+                app:popExitAnim="@anim/fade_out_bottom"
                 app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -35,10 +35,10 @@
         <action
                 android:id="@+id/actionAdvance"
                 app:destination="@id/categoriesFragment"
-                app:enterAnim="@anim/nav_default_enter_anim"
-                app:exitAnim="@anim/nav_default_exit_anim"
+                app:enterAnim="@anim/fade_in_right"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+                app:popExitAnim="@anim/fade_out_right"
+                app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
             android:id="@+id/categoriesFragment"
@@ -56,10 +56,10 @@
         <action
                 android:id="@+id/actionAdvance"
                 app:destination="@id/landmarkResultsFragment"
-                app:enterAnim="@anim/nav_default_enter_anim"
+                app:enterAnim="@anim/fade_in_right"
                 app:exitAnim="@anim/nav_default_exit_anim"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+                app:popExitAnim="@anim/fade_out_right" />
         <argument
                 android:name="location"
                 app:argType="com.google.android.gms.maps.model.LatLng" />
@@ -86,17 +86,17 @@
                 app:argType="com.google.android.gms.maps.model.LatLng" />
         <action
                 android:id="@+id/actionBeginSession"
-                app:destination="@id/navigationDestionation"
-                app:enterAnim="@anim/nav_default_enter_anim"
+                app:destination="@id/navigationDestination"
+                app:enterAnim="@anim/fade_in_bottom"
                 app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"
                 app:popUpTo="@+id/startDestination"
                 app:launchSingleTop="true"
-                app:popUpToInclusive="true" />
+                app:popUpToInclusive="true"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
-            android:id="@+id/navigationDestionation"
+            android:id="@+id/navigationDestination"
             android:name="ubb.license.david.monumentalv0.ui.session.tracking.NavigationFragment"
             android:label="fragment_navigation"
             tools:layout="@layout/fragment_navigation" />
@@ -108,12 +108,12 @@
         <action
                 android:id="@+id/actionAdvance"
                 app:destination="@id/startDestination"
-                app:enterAnim="@anim/nav_default_enter_anim"
+                app:enterAnim="@anim/fade_in_right"
                 app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"
                 app:popUpTo="@+id/loginDestination"
-                app:popUpToInclusive="true" />
+                app:popUpToInclusive="true"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
             android:id="@+id/splashFragment"
