--- a/Final/presentation/src/main/res/layout/fragment_navigation.xml
+++ b/Final/presentation/src/main/res/layout/fragment_navigation.xml
@@ -7,6 +7,19 @@
         android:layout_height="match_parent"
         tools:context=".session.tracking.NavigationFragment">
 
+    <TextView
+            android:id="@+id/label_target"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/navigation_arrow"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
             android:id="@+id/navigation_arrow"
             android:layout_width="256dp"
