--- a/Final/presentation/src/main/res/navigation/nav_setup.xml
+++ b/Final/presentation/src/main/res/navigation/nav_setup.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_home"
-            app:startDestination="@id/splashFragment">
+            app:startDestination="@id/startDestination">
 
     <fragment
             android:id="@+id/startDestination"
@@ -26,6 +26,12 @@
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                 app:popUpTo="@+id/startDestination"
                 app:popUpToInclusive="true" />
+        <action
+                android:id="@+id/actionDisplaySplash"
+                app:destination="@id/splashFragment"
+                app:popUpTo="@+id/startDestination"
+                app:popUpToInclusive="true"
+                />
     </fragment>
     <fragment
             android:id="@+id/detailsDestination"
@@ -130,7 +136,8 @@
                 app:enterAnim="@anim/nav_default_enter_anim"
                 app:exitAnim="@anim/nav_default_exit_anim"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+                app:popExitAnim="@anim/nav_default_pop_exit_anim"
+                app:launchSingleTop="true" />
     </fragment>
     <include app:graph="@navigation/nav_session" />
 
